--- a/src/app/paginas/Vehiculos/Vehiculos.component.html
+++ b/src/app/paginas/Vehiculos/Vehiculos.component.html
@@ -1,3 +1,43 @@
-<p>
-  Vehiculos works!
-</p>
+<div class="card">
+  <div class="card-header">
+    <h4>LISTA DE VEHICULOS</h4>
+  </div>
+  <div class="card-body">
+    <div class="row">
+      <div class="mb-3">
+        <label class="form-label">FILTRAR POR:</label>
+        <input type="text" class="form-control">
+      </div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-6">
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Nuevo</button>
+      </div>
+    </div>
+    <table class="table table-dark table-striped">
+      <thead>
+        <tr>
+          <th scope="col">Codigo</th>
+          <th scope="col">Marca</th>
+          <th scope="col">Modelo</th>
+          <th scope="col">Año</th>
+          <th scope="col">Calificacion</th>
+          <th scope="col">Opciones</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">001</th>
+          <td>Chevrolet</td>
+          <td>Sail 1.5</td>
+          <td>2023</td>
+          <td>5</td>
+          <td>Opciones</td>
+        </tr>
+      </tbody>
+    </table> 
+    </div> 
+
+
+</div>
