--- a/src/app/paginas/Vehiculos/Vehiculos.component.html
+++ b/src/app/paginas/Vehiculos/Vehiculos.component.html
@@ -15,8 +15,14 @@
         <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Nuevo</button>
       </div>
     </div>
+    <hr>
     <table class="table table-dark table-striped">
       <thead>
+        <tr>
+          <th colspan="6">
+            <button class="btn btn-success" (click)="mostrarImagen = !mostrarImagen">Mostrar Imagenes</button>
+          </th>
+        </tr>
         <tr>
           <th scope="col">Codigo</th>
           <th scope="col">Marca</th>
@@ -27,13 +33,13 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <th scope="row">001</th>
-          <td>Chevrolet</td>
-          <td>Sail 1.5</td>
-          <td>2023</td>
-          <td>5</td>
-          <td>Opciones</td>
+        <tr *ngFor="let vehiculo of listaVehiculo">
+          <td>{{vehiculo.codigo}}</td>
+          <td>{{vehiculo.marca}}</td>
+          <td>{{vehiculo.modelo}}</td>
+          <td>{{vehiculo.anio}}</td>
+          <td>{{vehiculo.calificacion}}</td>
+          <td></td>
         </tr>
       </tbody>
     </table> 
