--- a/src/app/paginas/Vehiculos/Vehiculos.component.html
+++ b/src/app/paginas/Vehiculos/Vehiculos.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card text-white bg-dark">
   <div class="card-header">
     <h4>LISTA DE VEHICULOS</h4>
   </div>
@@ -16,30 +16,48 @@
       </div>
     </div>
     <hr>
-    <table class="table table-dark table-striped">
+    <table class="table table-dark table-hover">
       <thead>
         <tr>
           <th colspan="6">
             <button class="btn btn-success" (click)="mostrarImagen = !mostrarImagen">Mostrar Imagenes</button>
           </th>
+          <th>
+            <div class="input-group input-group-sm mb-3">
+              <span class="input-group-text" id="basic-addon1">Filas:</span>
+              <select class="form-select form-select-sm" [(ngModel)]="rows" (change)="cambioRows()">
+                <option value="5">5</option>
+                  <option value="10">10</option>
+                  <option value="25">25</option>
+                  <option value="50">50</option>
+                  <option value="100">100</option>
+                  <option value="500">500</option>
+              </select>
+            </div>
+          </th>
         </tr>
-        <tr>
+         <tr>
+          <th>Imagen</th>
           <th scope="col">Codigo</th>
           <th scope="col">Marca</th>
           <th scope="col">Modelo</th>
           <th scope="col">Año</th>
           <th scope="col">Calificacion</th>
-          <th scope="col">Opciones</th>
+          <th>Opciones</th>
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let vehiculo of listaVehiculo">
+        <tr *ngFor="let vehiculo of listaVehiculo; let i=index">
+          <td style="width: 10%">
+            <img class="img-thumbnail" [src]="vehiculo.foto" *ngIf="mostrarImagen">
+          </td>
           <td>{{vehiculo.codigo}}</td>
           <td>{{vehiculo.marca}}</td>
           <td>{{vehiculo.modelo}}</td>
           <td>{{vehiculo.anio}}</td>
           <td>{{vehiculo.calificacion}}</td>
-          <td></td>
+          <td>
+          </td>
         </tr>
       </tbody>
     </table> 
