--- a/src/app/componentes/calificacion/calificacion.component.html
+++ b/src/app/componentes/calificacion/calificacion.component.html
@@ -1,3 +1,4 @@
-<p>
-  calificacion works!
-</p>
+<div (click)="mostrarCalificacion()">
+  <!--span *ngFor="let valor of lista" class="inline-block">* </span-->
+      <fa-icon *ngFor="let valor of lista" [icon]="faStar"></fa-icon>
+  <div>
