--- a/src/app/paginas/Vehiculos/Vehiculos.component.html
+++ b/src/app/paginas/Vehiculos/Vehiculos.component.html
@@ -6,7 +6,7 @@
     <div class="row">
       <div class="mb-3">
         <label class="form-label">FILTRAR POR:</label>
-        <input type="text" class="form-control" [(ngModel)]="filtrarPor" >
+        <input type="text" class="form-control" [(ngModel)]="filtrarPor" ((input))="consultaVehiculos()" >
       </div>
     </div>
     <br>
@@ -47,7 +47,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let vehiculo of getListaVehiculos()">
+        <tr *ngFor="let vehiculo of listaVehiculo">
           <td style="width: 10%">
             <img class="img-thumbnail" [src]="vehiculo.foto" *ngIf="mostrarImagen">
           </td>
@@ -70,4 +70,54 @@
     </div> 
 
 
+</div>
+
+
+<div class="modal fade" #exampleModal id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="formularioVehiculo" class="needs-validation" [ngClass]="{}">
+          <div class="mb-3">
+            <label for="formControlCodigo" class="form-label">Codigo</label>
+            <input type="text" class="form-control" id="formControlCodigo" formControlName="codigo" required minlength="3">
+          </div>
+
+          <div class="mb-3">
+            <label for="formControlMarca" class="form-label">Marca</label>
+            <input type="text" class="form-control" id="formControlMarca" formControlName="marca" required>
+          </div>
+
+          <div class="mb-3">
+            <label for="formControlModelo" class="form-label">Modelo</label>
+            <input type="text" class="form-control" id="formControlModelo" formControlName="modelo" required>
+          </div>
+
+          <div class="mb-3">
+            <label for="formControlAnio" class="form-label">Año</label>
+            <input type="text" class="form-control" id="formControlAnio" formControlName="anio" minlength="4" required>
+          </div>
+
+          <div class="mb-3">
+            <label for="formControlAnio" class="form-label">Calificación</label>
+            <input type="number" class="form-control" id="formControlAnio" formControlName="calificacion" max="5" min="1" required>
+          </div>
+
+          <div class="mb-3">
+            <label for="formControlAnio" class="form-label">Imagen URL:</label>
+            <input type="url" class="form-control" id="formControlAnio" formControlName="foto">
+          </div>
+
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" (click)="guardarVehiculo()">Save changes</button>
+      </div>
+    </div>
+  </div>
 </div>
