--- a/src/app/paginas/Vehiculos/Vehiculos.component.html
+++ b/src/app/paginas/Vehiculos/Vehiculos.component.html
@@ -25,7 +25,7 @@
           <th>
             <div class="input-group input-group-sm mb-3">
               <span class="input-group-text" id="basic-addon1">Filas:</span>
-              <select class="form-select form-select-sm" [(ngModel)]="rows" (change)="cambioRows()">
+              <select class="form-select form-select-sm" [(ngModel)]="rows" (change)="consultaVehiculos()">
                 <option value="5">5</option>
                   <option value="10">10</option>
                   <option value="25">25</option>
