--- a/src/app/componentes/PaginacionTabla/paginacion.component.html
+++ b/src/app/componentes/PaginacionTabla/paginacion.component.html
@@ -6,7 +6,7 @@
         <a class="page-link" href="javascript:" tabindex="-1" aria-disabled="true" (click)="atras()">Atrás</a>
       </li>
       <li class="page-item" [ngClass]="{'active': item == currentPage}" *ngFor="let item of listaPaginas">
-        <a class="page-link" href="javascript:" (click)="selectPage(item)">{{item}}</a>
+        <a class="page-link" href="javascript:" (click)="_selectPage(item)">{{item}}</a>
       </li>
       <li class="page-item" [ngClass]="{'disabled': currentPage == pages}">
         <a class="page-link" href="javascript:" (click)="siguiente()">Sig</a>
