--- a/src/app/paginas/Home/Home.component.html
+++ b/src/app/paginas/Home/Home.component.html
@@ -1,1 +1,1 @@
-<img class="rounded mx-auto d-block" src="/src/assets/12c6fab0f871cba7eee794d69a76d17d-removebg-preview.png">
+<img src="../../assets/carro.webP"alt="Funny image">
