--- a/src/app/paginas/Home/Home.component.html
+++ b/src/app/paginas/Home/Home.component.html
@@ -1,1 +1,1 @@
-<img src="../../assets/carro.webP"alt="Funny image">
+<img class="rounded mx-auto d-block" src="../../assets/angular-logo-transparente.png">
