--- a/src/app/paginas/Vehiculos/Vehiculos.component.html
+++ b/src/app/paginas/Vehiculos/Vehiculos.component.html
@@ -6,7 +6,7 @@
     <div class="row">
       <div class="mb-3">
         <label class="form-label">FILTRAR POR:</label>
-        <input type="text" class="form-control" [(ngModel)]="filtrarPor" ((input))="consultaVehiculos()" >
+        <input type="text" class="form-control" [(ngModel)]="filtrarPor" (input)="consultaVehiculos()" >
       </div>
     </div>
     <br>
