--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,15 +8,18 @@
        <span class="navbar-toggler-icon"></span>
      </button>
      <div class="collapse navbar-collapse" id="navbarNav">
-       <ul class="navbar-nav">
-         <li class="nav-item">
-           <a class="nav-link active" aria-current="page" [routerLink]="['/home']">Home</a>
-         </li>
-         <li class="nav-item">
-           <a class="nav-link" [routerLink]="['/vehiculos']">Vehículos</a>
-         </li>
-       </ul>
-     </div>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" [routerLink]="['/home']">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/vehiculos']">Vehículos</a>
+        </li>
+      </ul>
+    </div>
    </div>
  </nav>
  <br>
+ <div class="container">
+   <router-outlet></router-outlet>
+ </div>
