--- a/src/app/paginas/Home/Home.component.html
+++ b/src/app/paginas/Home/Home.component.html
@@ -1,1 +1,1 @@
-<img class="rounded mx-auto d-block" src="../../assets/angular-logo-transparente.png">
+<img class="rounded mx-auto d-block" src="../../assets/Logo2.png">
