--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -1,4 +1,5 @@
-<div class="card">
+<form [formGroup]="formularioCliente">
+  <div class="card">
     <div class="btn text-secondary bg-dark">
       <h1>{{tituloPagina}}</h1>
     </div>
@@ -74,3 +75,5 @@
     <div class="card-footer">
       <button class=' btn btn-outline-secondary' style="width:110px" (click)="goInicio()">Home</button>
     </div>
+
+</form>
