--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -1,19 +1,44 @@
 <form [formGroup]="formularioCliente">
   <div class='container-fluid'>
-    <h1>{{tituloPagina}}</h1>
-    <div class="row">
-      <div class="mb-3">
-        <label for="Id" class="form-label">Id</label>
-        <input type="text" class="form-control" id="Id">
-      </div>
-      <div class="mb-3">
-        <label for="Nombre" class="form-label">Nombre</label>
-        <input type="text" class="form-control" id="Nombre">
-      </div>
-      <div class="mb-3">
-        <label for="Apellido" class="form-label">Apellido</label>
-        <input type="text" class="form-control" id="Apellido">
-      </div>
+    <div class="bg-dark">
+      <ul>
+        <li class="card text-white bg-dark"><h1>{{tituloPagina}}</h1>
+        <div class="card-body">
+          <div class="row">
+            <div class="row">
+              <div class="col-md-4">
+                <label for="Id" class="form-label">Id</label>
+                <input type="text" class="form-control" id="Id">
+              </div>
+              <div class="col-md-4">
+                <label for="Nombre" class="form-label">Nombre</label>
+                <input type="text" class="form-control" id="Nombre">
+              </div>
+              <div class="col-md-4">
+                <label for="Apellido" class="form-label">Apellido</label>
+                <input type="text" class="form-control" id="Apellido">
+              </div>
+              <div class="col-md-4">
+                <label for="Correo" class="form-label">Correo Electronico</label>
+                <input type="email" class="form-control" id="Correo">
+              </div>
+              <div class="col-md-4">
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                  <label class="form-check-label" for="invalidCheck">
+                    Agree to terms and conditions
+                  </label>
+                  <div class="invalid-feedback">
+                    You must agree before submitting.
+                  </div>
+                </div>
+              </div>
+
+             </div>
+          </div>
+        </div>
+        </li>
+      </ul>
     </div>
   </div>
 </form>
