--- a/src/app/paginas/Vehiculos/Vehiculos.component.html
+++ b/src/app/paginas/Vehiculos/Vehiculos.component.html
@@ -12,7 +12,7 @@
     <br>
     <div class="row">
       <div class="col-6">
-        <button class="btn btn-outline-info" data-bs-toggle="modal" data-bs-target="#exampleModal">Nuevo</button>
+        <button class="btn btn-outline-info" data-bs-toggle="modal" data-bs-target="#exampleModal"(click)="inicializarFormulario()">Nuevo</button>
       </div>
     </div>
     <hr>
@@ -60,8 +60,8 @@
           </td>
           <td>
             <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-              <a class="btn btn-sm btn-primary" [routerLink]="[vehiculo.codigo]">Ver</a>
-              <button class="btn btn-sm btn-danger" (click)="eliminarVehiculo(vehiculo)">Eliminar</button>
+              <a class="btn btn-sm btn-outline-primary" [routerLink]="[vehiculo.codigo]">Ver</a>
+              <button class="btn btn-sm btn-outline-danger" (click)="eliminarVehiculo(vehiculo)">Eliminar</button>
             </div>
           </td>
         </tr>
@@ -90,30 +90,35 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form [formGroup]="formularioVehiculo" class="needs-validation" [ngClass]="{}">
+        <form [formGroup]="formularioVehiculo" class="needs-validation" [ngClass]="{'was-validated': wasValidated}">
           <div class="mb-3">
             <label for="formControlCodigo" class="form-label">Codigo</label>
             <input type="text" class="form-control" id="formControlCodigo" formControlName="codigo" required minlength="3">
+            <app-msjValidacion [summited]="wasValidated" [control]="formularioVehiculo.controls['codigo']"></app-msjValidacion>
           </div>
 
           <div class="mb-3">
             <label for="formControlMarca" class="form-label">Marca</label>
             <input type="text" class="form-control" id="formControlMarca" formControlName="marca" required>
+            <app-msjValidacion [summited]="wasValidated" [control]="formularioVehiculo.controls['marca']"></app-msjValidacion>
           </div>
 
           <div class="mb-3">
             <label for="formControlModelo" class="form-label">Modelo</label>
             <input type="text" class="form-control" id="formControlModelo" formControlName="modelo" required>
+            <app-msjValidacion [summited]="wasValidated" [control]="formularioVehiculo.controls['modelo']"></app-msjValidacion>
           </div>
 
           <div class="mb-3">
             <label for="formControlAnio" class="form-label">Año</label>
             <input type="text" class="form-control" id="formControlAnio" formControlName="anio" minlength="4" required>
+            <app-msjValidacion [summited]="wasValidated" [control]="formularioVehiculo.controls['anio']"></app-msjValidacion>
           </div>
 
           <div class="mb-3">
             <label for="formControlAnio" class="form-label">Calificación</label>
             <input type="number" class="form-control" id="formControlAnio" formControlName="calificacion" max="5" min="1" required>
+            <app-msjValidacion [summited]="wasValidated" [control]="formularioVehiculo.controls['calificacion']"></app-msjValidacion>
           </div>
 
           <div class="mb-3">
@@ -124,8 +129,8 @@
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-        <button type="button" class="btn btn-primary" (click)="guardarVehiculo()">Guardar</button>
+        <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cerrar</button>
+        <button type="button" class="btn btn-outline-primary" (click)="guardarVehiculo()">Guardar cambios</button>
       </div>
     </div>
   </div>
